# ProgrObjekt_Projekt

./: CMakeLists.txt  addiction.cpp  addiction.h  calculator.cpp  calculator.h  controller.cpp  controller.h  dataCollect.cpp  dataCollect.h  division.cpp  division.h  main.cpp  menu.cpp  menu.h  multiplication.cpp  multiplication.h  operations.h  substraction.cpp  substraction.h
